fix(safari): make sure css grid does not overflow

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ header h3 {
 .map {
   grid-area: map;
   margin: 1em;
+  overflow: hidden;
 }
 
 .map svg {
